--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,13 @@
             <version>2.5</version>
         </dependency>
 
+        <!-- Webcam-Capture -->
+        <dependency>
+            <groupId>com.github.sarxos</groupId>
+            <artifactId>webcam-capture</artifactId>
+            <version>0.3.10</version>
+        </dependency>
+
     </dependencies>
 
     <build>
